#316 fixed backend UUID issues