@@ -26,7 +26,7 @@ public class BlogPostResponseDto {
     private LocalDateTime dateCreated;
     private List<BlogCommentDto> comments;
     private Set<String> tags;
-    private long userId;
+    private UUID userId;
     private List<String> imageUrls;
 
     public static BlogPostResponseDto fromEntity(BlogPost blogPost) {
@@ -45,7 +45,7 @@ public class BlogPostResponseDto {
         // Map BlogImage entities to URLs
         List<String> imageUrls = blogPost.getImages().stream()
                 .map(BlogImage::getImagePath)
-                .collect(Collectors.toList());
+                .toList();
         response.setImageUrls(imageUrls);
         return response;
     }
